<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            style="@style/regularTextViewFont400"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_amount"
            android:textColor="@color/grey_600" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/amountTextInputLayout"
            style="@style/regularTextViewFont400"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:hint="@string/amount"
            app:boxStrokeErrorColor="@color/red_500"
            app:errorTextColor="@color/red_500">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/amountTextInputEditText"
                style="@style/regularTextViewFont400"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:inputType="numberDecimal"
                android:textColor="@color/textPrimary"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/bannerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                style="@style/regularTextViewFont400"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/banner_view"
                android:textColor="@color/grey_600" />

            <FrameLayout
                android:id="@+id/bannerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/talyPayRadioLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:clipToPadding="false"
            android:focusable="true"
            android:orientation="horizontal">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/talyPayRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:clickable="false"
                android:clipToPadding="false"
                android:focusable="false" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="40dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/ic_logo_horizontal" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/mediumTextViewFont500"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:includeFontPadding="false"
                android:text="@string/split_payment_with_taly" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/payButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/manrope_semi_bold_600"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/proceed"
        app:backgroundTint="@color/primaryColor" />

</RelativeLayout>